Adds new handlebars template for monster detail view, etc.

--- a/assets/scripts/templates/monsters.handlebars
+++ b/assets/scripts/templates/monsters.handlebars
@@ -1,16 +1,13 @@
 {{#each monsters as |monster|}}
 
-  <!-- {{> partial}}
-  Don't uncomment yet -->
 
- <!-- Developers, why are we using data-id and not just id? -->
  <div class="col-md-4 text-center">
-  <ul data-id="{{monster.id}}">
+  <ul class="list-unstyled" data-id="{{monster.id}}">
     <li>Name: {{monster.name}} </li>
     <li>Hunger: {{monster.hunger}}</li>
     <li>Mood: {{monster.mood}}</li>
     <li>Cleanliness: {{monster.cleanliness}}</li>
-    <li><button id="delete_monster">Delete</button></li>
+    <li><button type="button" class="btn btn-primary btn-lg view_monster">View</button></li>
   </ul>
 
 </div>
