Adds single monster image
Image displays on list of monsters. Large image displays on monster
detail.

--- a/assets/scripts/templates/monster-detail.handlebars
+++ b/assets/scripts/templates/monster-detail.handlebars
@@ -2,6 +2,7 @@
 
  <div class="col-md-4 text-center">
   <ul class="list-unstyled" data-id="{{monster.id}}">
+    <div class="col-md-4 text-center"><img class="monster-image-large" src="https://i.imgur.com/klK8v0A.png"</div>
     <li>Name: {{monster.name}} <button class="rename_monster btn btn-primary btn-xs">Rename</button></li>
     <li>Hunger: {{monster.hunger}} <button class="feed_monster btn btn-primary btn-xs">Feed</button></li>
     <li>Mood: {{monster.mood}} <button class="play_with_monster btn btn-primary btn-xs">Play</button></li>
