--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -30,3 +30,15 @@ body {
   margin-right: -20px;
   margin-top: -20px;
 }
+
+.monster-image {
+  height: 100px;
+  width: 100px;
+
+}
+
+.monster-image-large {
+  height: 300px;
+  width: 300px;
+
+}
