--- a/assets/scripts/templates/monsters.handlebars
+++ b/assets/scripts/templates/monsters.handlebars
@@ -2,6 +2,7 @@
 
 
  <div class="col-md-4 text-center">
+   <div class="col-md-4 text-center"><img class="monster-image" src="https://i.imgur.com/klK8v0A.png"</div>
   <ul class="list-unstyled" data-id="{{monster.id}}">
     <li>Name: {{monster.name}} </li>
     <li>Hunger: {{monster.hunger}}</li>
