Adds Ghost image
Ghost image now appears for monsters with ghost type. Huzzah

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -58,3 +58,12 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+.ghost{
+  display: block;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  background: url('http://i.imgur.com/9c6bY0X.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
