--- a/assets/scripts/templates/monsters.handlebars
+++ b/assets/scripts/templates/monsters.handlebars
@@ -8,7 +8,7 @@
     <li>Hunger: {{monster.hunger}}</li>
     <li>Mood: {{monster.mood}}</li>
     <li>Cleanliness: {{monster.cleanliness}}</li>
-    <li><button data-id="{{monster.id}} type="button" class="btn btn-primary btn-lg view_monster">View</button></li>
+    <li><button data-id="{{monster.id}}" type="button" class="btn btn-primary btn-lg view_monster">View</button></li>
   </ul>
 </div>
 {{else}}
