Adds some style
Centers columns and things for a better layout. More to come later.

--- a/assets/scripts/templates/monster-detail.handlebars
+++ b/assets/scripts/templates/monster-detail.handlebars
@@ -1,6 +1,6 @@
- <div class="col-md-4 text-center">
+ <div class="col-md-4 text-center col-centered">
   <ul class="list-unstyled" data-id="{{monster.id}}">
-    <div class="col-md-4 text-center"><img class="monster-image-large {{monster.type}}" src=""</div>
+    <div class="col-md-4"><img class="monster-image-large {{monster.type}}" src=""</div>
     <li>Name: {{monster.name}} <button class="rename_monster btn btn-primary btn-xs">Rename</button></li>
     <li>type: {{monster.type}} </li>
     <li>Hunger: {{monster.hunger}} <button class="feed_monster btn btn-primary btn-xs">Feed</button></li>
