--- a/assets/scripts/templates/monsters.handlebars
+++ b/assets/scripts/templates/monsters.handlebars
@@ -1,8 +1,8 @@
 {{#each monsters as |monster|}}
 
 
- <div class="col-md-4 text-center">
-   <div class="col-md-4 text-center"><img class="monster-image-small {{monster.type}}" src=""</div>
+ <div class="col-sm-2 text-center col-centered">
+<img class="monster-image-small {{monster.type}}" src=""</div>
   <ul class="list-unstyled" data-id="{{monster.id}}">
     <li>Name: {{monster.name}} </li>
     <li>Hunger: {{monster.hunger}}</li>
