Removes Play function
User can no longer play with monster. Also, added mood image class
in order to determine which image to display. In the future, sad
images will be added for those neglected monsters of the world.

Also, added logic to monster to ensure that hunger and cleanliness
cannot go below 0.

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -51,7 +51,7 @@ body {
   text-align: center;
 }
 
-.bat{
+.bat-happy-alive{
   display: block;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -60,7 +60,7 @@ body {
   background-size: cover;
 }
 
-.squid{
+.squid-happy-alive{
   display: block;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -69,7 +69,7 @@ body {
   background-size: cover;
 }
 
-.ghost{
+.ghost-happy-alive{
   display: block;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
