--- a/assets/scripts/templates/monster-detail.handlebars
+++ b/assets/scripts/templates/monster-detail.handlebars
@@ -1,10 +1,10 @@
  <div class="col-md-4 text-center col-centered">
   <ul class="list-unstyled" data-id="{{monster.id}}">
-    <div class="col-md-4"><img class="monster-image-large {{monster.type}}-{{monster.status}}" src=""</div>
+    <div class="col-md-4"><img class="monster-image-large {{monster.type}}-{{monster.mood}}-{{monster.status}}" src=""</div>
     <li>Name: {{monster.name}} <button class="rename_monster btn btn-primary btn-xs">Rename</button></li>
     <li>type: {{monster.type}} </li>
     <li>Hunger: {{monster.hunger}} <button class="feed_monster btn btn-primary btn-xs">Feed</button></li>
-    <li>Mood: {{monster.mood}} <button class="play_with_monster btn btn-primary btn-xs">Play</button></li>
+    <li>Mood: {{monster.mood}}</li>
     <li>Cleanliness: {{monster.cleanliness}} <button class="clean_monster btn btn-primary btn-xs">Clean</button></li>
     <li><button class="delete_monster clean_monster btn btn-primary btn-xs">Set free!</button></li>
   </ul>
