--- a/assets/scripts/templates/monsters.handlebars
+++ b/assets/scripts/templates/monsters.handlebars
@@ -1,8 +1,6 @@
 {{#each monsters as |monster|}}
-
-
  <div class="col-sm-2 text-center col-centered">
-<img class="monster-image-small {{monster.type}}" src=""</div>
+<img class="monster-image-small {{monster.type}}-{{monster.mood}}-{{monster.status}}" src=""</div>
   <ul class="list-unstyled" data-id="{{monster.id}}">
     <li>Name: {{monster.name}} </li>
     <li>Hunger: {{monster.hunger}}</li>
