Fixes monster index display
Monsters werent showing as dead/sad on index. Fixed it.

--- a/assets/scripts/templates/monster-detail.handlebars
+++ b/assets/scripts/templates/monster-detail.handlebars
@@ -6,7 +6,7 @@
     <li>Hunger: {{monster.hunger}} <button class="feed_monster btn btn-primary btn-xs">Feed</button></li>
     <li>Mood: {{monster.mood}}</li>
     <li>Cleanliness: {{monster.cleanliness}} <button class="clean_monster btn btn-primary btn-xs">Clean</button></li>
-    <li><button class="delete_monster clean_monster btn btn-primary btn-xs">Set free!</button></li>
+    <li><button class="delete_monster btn btn-primary btn-xs">Set free!</button></li>
   </ul>
 
 </div>
