Adds monster images
Adds all monster images and updates handlebars templates to use them.

--- a/assets/scripts/templates/monsters.handlebars
+++ b/assets/scripts/templates/monsters.handlebars
@@ -10,7 +10,9 @@
   </ul>
 </div>
 {{else}}
-<div class="col-md-4 text-center">
-You have no monsters. Create one now!
+<div class="col-md-4 col-centered text-center">
+<h2>Welcome to PixlMonster!</h2>
+<p class="lead">You currently have no monsters. <br> Why don't you create one?</p>
+<p class="lead">But beware - monsters are hungry and will require your constant attention!</p>
 </div>
 {{/each}}
