--- a/assets/scripts/templates/monster-detail.handlebars
+++ b/assets/scripts/templates/monster-detail.handlebars
@@ -1,4 +1,4 @@
-<div class="text-center col-centered col-md-8">
+<!-- <div class="text-center col-centered col-md-8">
   <img class="img-responsive monster-holder" src="assets/images/{{monster.home}}.png">
  <ul class="list-unstyled" data-id="{{monster.id}}">
    <div class="col-md-4"><img class="monster-image-large {{monster.type}}-{{monster.mood}}-{{monster.status}}" src=""</div>
@@ -13,4 +13,17 @@
 
  </ul>
 
+</div> -->
+<div class="row">
+  <div class="img-wrapper col-xs-12 col-sm-10 col-md-10 col-lg-8 col-centered">
+  <h1>{{monster.name}}</h1>
 </div>
+</div>
+<div class="img-wrapper col-xs-12 col-sm-10 col-md-10 col-lg-8 col-centered">
+  <img class="img-responsive" src="assets/images/{{monster.home}}.png">
+  <div class="img-overlay">
+    <img class="monster-detail-image" src="assets/images/{{monster.type}}_{{monster.mood}}_{{monster.status}}.png">
+  </div>
+  <div class="img-overlay-hunger">
+    <div class="lead">Hunger <meter low="3" high="4" max="5" value="{{monster.hunger}}" optimum="5"></meter></div>
+  </div>
