--- a/assets/scripts/templates/monster-detail.handlebars
+++ b/assets/scripts/templates/monster-detail.handlebars
@@ -1,19 +1,4 @@
-<!-- <div class="text-center col-centered col-md-8">
-  <img class="img-responsive monster-holder" src="assets/images/{{monster.home}}.png">
- <ul class="list-unstyled" data-id="{{monster.id}}">
-   <div class="col-md-4"><img class="monster-image-large {{monster.type}}-{{monster.mood}}-{{monster.status}}" src=""</div>
-   <li>Name: {{monster.name}} <button class="rename_monster btn btn-primary btn-xs">Rename</button></li>
-   <li>type: {{monster.type}} </li>
-   <li>Hunger: {{monster.hunger}} <button class="feed_monster btn btn-primary btn-xs">Feed</button></li>
-   <li>Mood: {{monster.mood}}</li>
-   <li>Cleanliness: {{monster.cleanliness}} <button class="clean_monster btn btn-primary btn-xs">Clean</button></li>
-   <li>Home: {{monster.home}}</button></li>
-
-   <li><button class="delete_monster btn btn-primary btn-xs">Set free!</button></li>
-
- </ul>
-
-</div> -->
+<div>
 <div class="row">
   <div class="img-wrapper col-xs-12 col-sm-10 col-md-10 col-lg-8 col-centered">
   <h1>{{monster.name}}</h1>
@@ -30,3 +15,9 @@
   <div class="img-overlay-poop col-centered">
     <img id="poop-image" class="img-responsive poop-{{monster.cleanliness}}" src="assets/images/poop.png">
   </div>
+</div>
+<div class="row">
+  <img id="feed-monster" src="assets/images/feed.png">
+</div>
+<button id="delete-monster" data-id="{{monster.id}}" class="btn btn-primary">Delete</button>
+</div>
