--- a/assets/scripts/templates/monsters.handlebars
+++ b/assets/scripts/templates/monsters.handlebars
@@ -1,5 +1,5 @@
 {{#each monsters as |monster|}}
- <div class="col-sm-2 text-center col-centered">
+ <div class="col-xs-6 col-sm-2 col-sm-3 col-md-3 col-lg-3 text-center col-centered">
    <img class="monster-image-small" src="assets/images/{{monster.type}}_{{monster.mood}}_{{monster.status}}.png"</div>
   <ul class="list-unstyled" data-id="{{monster.id}}">
     <li>Name: {{monster.name}} </li>
