--- a/assets/scripts/templates/monsters.handlebars
+++ b/assets/scripts/templates/monsters.handlebars
@@ -1,9 +1,8 @@
 {{#each monsters as |monster|}}
  <div class="col-xs-6 col-sm-2 col-sm-3 col-md-3 col-lg-3 text-center col-centered">
-   <img class="monster-image-small" src="assets/images/{{monster.type}}_{{monster.mood}}_{{monster.status}}.png"</div>
+   <img class="monster-image-small view_monster" src="assets/images/{{monster.type}}_{{monster.mood}}_{{monster.status}}.png" data-id="{{monster.id}}"></div>
   <ul class="list-unstyled" data-id="{{monster.id}}">
     <li>Name: {{monster.name}} </li>
-    <li><button data-id="{{monster.id}}" type="button" class="btn btn-primary btn-sm view_monster">View</button></li>
   </ul>
 </div>
 {{else}}
