Changes delete button
Replaces button text and formatting.

--- a/assets/scripts/templates/monster-detail.handlebars
+++ b/assets/scripts/templates/monster-detail.handlebars
@@ -19,5 +19,5 @@
 <div class="row">
   <img id="feed-monster" src="assets/images/feed.png">
 </div>
-<button id="delete-monster" data-id="{{monster.id}}" class="btn btn-primary">Delete</button>
+<button id="delete-monster" data-id="{{monster.id}}" class="btn btn-secondary">Release Monster</button>
 </div>
