--- a/assets/scripts/templates/monsters.handlebars
+++ b/assets/scripts/templates/monsters.handlebars
@@ -4,7 +4,7 @@
 {{/if}}
 {{#each monsters as |monster|}}
  <div class="col-xs-6 col-sm-2 col-sm-3 col-md-3 col-lg-2 text-center col-centered">
-   <img class="monster-image-small view_monster" src="assets/images/{{monster.type}}_{{monster.mood}}_{{monster.status}}.png" data-id="{{monster.id}}">
+   <img class="monster-image-small view_monster" src="./assets/images/{{monster.type}}_{{monster.mood}}_{{monster.status}}.png" data-id="{{monster.id}}">
   <ul class="list-unstyled" data-id="{{monster.id}}">
     <li>Name: {{monster.name}} </li>
   </ul>
