--- a/assets/scripts/templates/monsters.handlebars
+++ b/assets/scripts/templates/monsters.handlebars
@@ -1,6 +1,6 @@
 
 {{#if monsters}}
-<h3>Select a monster to interact with it!</h3>
+<h3 class="lead">Select a monster to interact with it!</h3>
 {{/if}}
 {{#each monsters as |monster|}}
  <div class="col-xs-6 col-sm-2 col-sm-3 col-md-3 col-lg-2 text-center col-centered">
