Updates landing page instructions
Instructions now talk about how the monster grows over time.

--- a/assets/scripts/templates/monsters.handlebars
+++ b/assets/scripts/templates/monsters.handlebars
@@ -15,5 +15,7 @@
 <p class="lead">You currently have no monsters. <br> Why don't you create one?</p>
 <p class="lead">But beware - monsters are hungry and will require your constant attention!</p>
 <p class="lead">After you have created your monster, you will need to periodically feed and clean up after it. Failing to do so, will result in its certain doom...</p>
+<p class="lead">The longer your monster remains alive, the bigger it will get!</p>
+
 </div>
 {{/each}}
