--- a/assets/scripts/templates/monster-detail.handlebars
+++ b/assets/scripts/templates/monster-detail.handlebars
@@ -1,7 +1,6 @@
 <div>
 <div class="row">
   <div class="img-wrapper col-xs-12 col-sm-10 col-md-10 col-lg-8 col-centered">
-  <h1>{{monster.name}}</h1>
 </div>
 </div>
 <div class="img-wrapper col-xs-12 col-sm-10 col-md-10 col-lg-8 col-centered">
@@ -19,6 +18,5 @@
 <div class="row">
   <img id="feed-monster" class="food">
 </div>
-<button id="delete-monster" data-id="{{monster.id}}" class="btn btn-secondary">Say Goodbye</button>
+<button id="delete-monster" data-id="{{monster.id}}" class="btn btn-secondary">Say Goodbye</button><br>
 </div>
-size is {{monster.size}}
