Removes logs and linter errors

--- a/assets/scripts/templates/monster-detail.handlebars
+++ b/assets/scripts/templates/monster-detail.handlebars
@@ -6,7 +6,7 @@
 <div class="img-wrapper col-xs-12 col-sm-10 col-md-10 col-lg-8 col-centered">
   <img class="img-responsive {{monster.home}}">
   <div class="img-overlay">
-    <img class="{{monster.type}}_{{monster.mood}}_{{monster.status}} monster-size-{{monster.size}}">
+    <img id="monster-image" class="{{monster.type}}_{{monster.mood}}_{{monster.status}} monster-size-{{monster.size}}">
   </div>
   <div class="img-overlay-hunger">
     <div class="lead">Hunger<meter low="3" high="4" max="5" value="{{monster.hunger}}" optimum="5"></meter></div>
