--- a/assets/scripts/templates/monsters.handlebars
+++ b/assets/scripts/templates/monsters.handlebars
@@ -4,10 +4,8 @@
 {{/if}}
 {{#each monsters as |monster|}}
  <div class="col-xs-6 col-sm-2 col-sm-3 col-md-3 col-lg-2 text-center col-centered">
+ <h4>{{monster.name}}</h4>
    <img class="monster-image-small view_monster {{monster.type}}_{{monster.mood}}_{{monster.status}}" data-id="{{monster.id}}">
-  <ul class="list-unstyled" data-id="{{monster.id}}">
-    <li>Name: {{monster.name}} </li>
-  </ul>
 </div>
 {{else}}
 <div class="col-md-4 col-centered text-center">
